fix(dropdown): Set dropdown z-index so that it does not get croped by bal-navbar

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -23,6 +23,7 @@
     }
 
     .dropdown-menu {
+      z-index: 45;
       padding-top: 0;
     }
 
